# PPG_FingerVein_age_detection

./: .gitignore  README.md  proposta-rivista.md  pyproject.toml  todo.md
labs/: DL_01 - Regression.ipynb  DL_02 - Convolutional neural networks - solution.ipynb  DL_03 - Recurrent neural networks.ipynb  DL_04 - Autoencoders.ipynb  DL_05 - Generative models - solution.ipynb  DL_06 - Reinforcement learning - solution.ipynb  DL_07 - Natural language processing.ipynb
notebooks/: 01_fingervein_exploration.ipynb  02_ppg_exploration.ipynb  03_combined_dataset.ipynb  04_extracts_fingervein_age_labels.ipynb
